# Anima

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  FAQ.md  README.md  README_ANIMA.md  README_CLAUDE.md  README_OPENCODE.md  SETUP_ANIMA.md  SETUP_CLAUDE.md  clusters.dot  evolution.dot  pyproject.toml  pyrightconfig.json  topology.dot
.gemini/: settings.json
anima/: __init__.py  cli.py  logging.py
commands/: detect-achievements.md  forget.md  memories.md  memory-export.md  please-remember.md  refresh-memories.md  sign-memories.md
gemini-docs/: MIGRATION_PLAN.md  REVIEW_CODEBASE.md
prototype/: SEMANTIC_MEMORY_PLAN.md  embedding_fastembed.py  embedding_poc.py  memories.csv  memories.dot  memories.json  memories_copy.db  query_real_memories.py  test_memories.db  test_memories_fastembed.db
scripts/: backfill_platforms.py  profile_storage_injection.py
tests/: conftest.py  test_agent_patching.py  test_builds_on.py  test_commands.py  test_config.py  test_core_models.py  test_curiosity.py  test_curiosity_bridge.py  test_decay.py  test_detect_achievements.py  test_diary.py  test_dream_fsm.py  test_dream_n2.py  test_dream_n3.py  test_dream_rem.py  test_embeddings.py  test_git.py  test_graph.py  test_hooks.py  test_import_seeds.py  test_injection.py  test_integration.py  test_integrity.py  test_keygen.py  test_limits.py  test_project_context.py  test_semantic_memory.py  test_session.py  test_session_end.py  test_setup.py  test_sign_memories.py  test_signing.py  test_social_cues.py  test_storage.py  test_temporal.py  test_time_travel.py  test_topic_shift.py
(+115 files in other folders)
