[project]
name = "anima"
version = "0.12.10"
description = "Long Term Memory for Anima Agents - human-like persistent memory across sessions"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "matt-grain" }
]
license = { text = "MIT" }
dependencies = [
    "tiktoken>=0.8.0",
    "fastembed>=0.4.0",
    "jinja2>=3.1.0",
    "pyyaml>=6.0.0",
    "pydantic>=2.0.0",
    "loguru>=0.7.0",
]

[project.scripts]
anima = "anima.cli:main"

[dependency-groups]
dev = [
    "anima",
    "bandit>=1.9.2",
    "pre-commit>=4.5.1",
    "pyright>=1.1.407",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=7.0.0",
    "radon>=6.0.1",
    "ruff>=0.14.10",
    "ty>=0.0.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["anima"]

[tool.hatch.build.targets.sdist]
include = [
    "anima/",
    "seeds/",
]

[tool.hatch.build.targets.wheel.force-include]
"seeds" = "seeds"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# Exclude benchmarks from default test run (run with: pytest tests/benchmarks/)
norecursedirs = ["tests/benchmarks"]

[tool.uv.workspace]
members = [
    ".",
]

[tool.uv.sources]
anima = { workspace = true }
